Fixed trainPicker-button not working on mobile devices, because of faulty css-rules

--- a/style.css
+++ b/style.css
@@ -341,6 +341,7 @@ footer {
     }
 
     button.trainPicker:active {
+        margin: 30px -20px 0 0;
         box-shadow: 0px 0px 0px rgba(0,0,0,0);
     }
 
